build(desktop): add experimental ProGuard shrink-only distribution